# CortexRE-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SOLUTION.md  docker-compose.yml  pyproject.toml
scripts/: smoke_test.py
src/: eda.ipynb  main.py
src/agents/: state.py  workflow.py
src/agents/nodes/: critique_agent.py  input_guard.py  output_guard.py  research_agent.py
src/agents/prompts/: critique_agent.md  input_guard.md  loader.py  output_guard.md  research_agent.md
src/agents/tools/: pandas_tools.py
src/api/: deps.py  endpoints.py  exceptions.py  schemas.py
src/core/: config.py  logging_config.py
src/evaluation/: evaluation.py  feedbacks.py  ground_truth.py  runner.py
src/frontend/: app.py  chat_ui.py  common.py  eda_ui.py
src/services/agent/: exceptions.py  service.py
src/services/llm/: exceptions.py  service.py
src/services/portfolio/: asset_manager.py  exceptions.py  normalization.py  service.py
tests/: conftest.py  test_agent_service_steps_reset.py  test_asset_manager.py  test_critique_agent.py  test_critique_result.py  test_normalization.py  test_pandas_tools.py  test_portfolio_query.py  test_research_agent_steps.py
tests/evaluation/: ground_truth.json
